--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -22,8 +22,8 @@ output:
 
 ```{r global_options}
 knitr::opts_chunk$set(
-  cache=TRUE
-  ,fig.path="figures/"
+  fig.path="figures/"
+  ,fig.width=12
   )
 ```
 
