rounded some numbers

--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -156,7 +156,8 @@ interval_steps<-activity_data %>%
 interval_steps
 
 interval_max_steps<-interval_steps %>%
-  filter(interval==interval[which(avg_steps==max(avg_steps))])
+  filter(interval==interval[which(avg_steps==max(avg_steps))]) %>%
+  mutate(avg_steps=round(avg_steps,2))
 
 ggplot(
   interval_steps
