cast select functions from dplyr package

--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -61,7 +61,7 @@ if(!file.exists("data/activity.csv")) {
   unzip(temp,exdir="data/")
   unlink(temp)
   rm(temp)
-}
+  }
 
 activity_data<-read.csv("data/activity.csv")
 ```
@@ -76,7 +76,7 @@ activity_data<-read.csv("data/activity.csv")
 
 ```{r}
 daily_steps<-activity_data %>%
-  select(date,steps) %>% 
+  dplyr::select(date,steps) %>% 
   na.omit() %>%
   mutate(date=ymd(date)) %>%
   group_by(date) %>%
@@ -237,7 +237,7 @@ activity_data.imputed <- merge(activity_data,predictions,all.x=T) %>%
 
 ```{r fig.height=8}
 daily_steps.imputed<-activity_data.imputed %>%
-  select(date,steps) %>% 
+  dplyr::select(date,steps) %>% 
   mutate(date=ymd(date)) %>%
   group_by(date) %>%
   summarize(daily_steps=sum(steps))
